---
config:
  theme: base
  layout: elk
  themeVariables:
    primaryColor: '#F4F6F9'
    primaryTextColor: '#0B2545'
    primaryBorderColor: '#2E74B5'
    lineColor: '#5E6B7A'
    fontFamily: 'Arial'
---
erDiagram
    %% Sources: docs/schema/001_v2_comprehensive_schema.sql; docs/schema/004_knowledge_chunks.sql; docs/schema/005_leads.sql; backend/sql/2026-05-15_all_new_features.sql; backend/sql/2026-05-29_payment_fees_model.sql; backend/sql/2026-05-30_owner_subscriptions.sql
    PROFILES ||--o{ LISTINGS : owns
    PROFILES ||--o{ FAVORITES : saves
    PROFILES ||--o{ LISTING_APPLICATIONS : submits
    PROFILES ||--o{ BOOKINGS : books
    PROFILES ||--o{ SUBSCRIPTIONS : has
    PROFILES ||--o{ LEADS : creates
    AGENCIES ||--o{ PROJECTS : contains
    AGENCIES ||--o{ LISTINGS : markets
    PROJECTS ||--o{ LISTINGS : includes
    NEIGHBORHOODS ||--o{ LISTINGS : locates
    LISTINGS ||--o{ HOUSEMATES : has
    LISTINGS ||--o{ LISTING_APPLICATIONS : receives
    LISTINGS ||--o{ FAVORITES : saved_as
    LISTINGS ||--o{ BOOKINGS : reserved_by
    LISTINGS ||--o{ PAYMENTS : charged_for
    LISTINGS ||--o{ KNOWLEDGE_CHUNKS : indexed_as
    LISTINGS ||--o{ LEADS : contacted_through
    LISTINGS ||--o{ VIEWINGS : visited_by
    BOOKINGS ||--o{ PAYMENTS : records
